--- a/src/Marketplace.EventSourcing/Marketplace.EventSourcing.csproj
+++ b/src/Marketplace.EventSourcing/Marketplace.EventSourcing.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DeepCloner" Version="0.10.3" />
+    <PackageReference Include="LibLog" Version="5.0.8">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
