--- a/src/Marketplace.Ads.Domain/Marketplace.Ads.Domain.csproj
+++ b/src/Marketplace.Ads.Domain/Marketplace.Ads.Domain.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Marketplace.EventSourcing\Marketplace.EventSourcing.csproj" />
+    <ProjectReference Include="..\Marketplace.Ads.Messages\Marketplace.Ads.Messages.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
